src/Chunky/ChunkyParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.3.1.7705
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.3.1.7705 Chunky.g 2011-09-08 22:01:59

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162


using System.Collections.Generic;
using Antlr.Runtime;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace  Chunky 
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.3.1.7705")]
[System.CLSCompliant(false)]
public partial class ChunkyParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AMPER", "ARGS", "ASSIGN", "BLOCK", "CALL", "COMMA", "DAMPER", "DIGIT", "DOT", "DPIPE", "EQUAL", "FALSE", "FLOAT", "FUNC", "GREATER", "GREATEREQUAL", "ID", "IF", "INT", "LCURLY", "LESS", "LESSEQUAL", "LETTER", "LPAREN", "MINUS", "NOTEQUAL", "PARAMS", "PERCENT", "PIPE", "PLUS", "RCURLY", "RPAREN", "SEMI", "SLASH", "STAR", "STRING", "TRUE", "WS", "'!'", "'else'"
	};
	public const int EOF=-1;
	public const int AMPER=4;
	public const int ARGS=5;
	public const int ASSIGN=6;
	public const int BLOCK=7;
	public const int CALL=8;
	public const int COMMA=9;
	public const int DAMPER=10;
	public const int DIGIT=11;
	public const int DOT=12;
	public const int DPIPE=13;
	public const int EQUAL=14;
	public const int FALSE=15;
	public const int FLOAT=16;
	public const int FUNC=17;
	public const int GREATER=18;
	public const int GREATEREQUAL=19;
	public const int ID=20;
	public const int IF=21;
	public const int INT=22;
	public const int LCURLY=23;
	public const int LESS=24;
	public const int LESSEQUAL=25;
	public const int LETTER=26;
	public const int LPAREN=27;
	public const int MINUS=28;
	public const int NOTEQUAL=29;
	public const int PARAMS=30;
	public const int PERCENT=31;
	public const int PIPE=32;
	public const int PLUS=33;
	public const int RCURLY=34;
	public const int RPAREN=35;
	public const int SEMI=36;
	public const int SLASH=37;
	public const int STAR=38;
	public const int STRING=39;
	public const int TRUE=40;
	public const int WS=41;
	public const int T__42=42;
	public const int T__43=43;

	// delegates
	// delegators

	public ChunkyParser( ITokenStream input )
		: this( input, new RecognizerSharedState() )
	{
	}
	public ChunkyParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);

		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();


		OnCreated();
	}
		
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return ChunkyParser.tokenNames; } }
	public override string GrammarFileName { get { return "Chunky.g"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	public sealed partial class program_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<CommonTree>, IAstRuleReturnScope
	{
		private CommonTree _tree;
		public CommonTree Tree { get { return _tree; } set { _tree = value; } }
		object IAstRuleReturnScope.Tree { get { return Tree; } }
		public program_return(ChunkyParser grammar) {OnCreated(grammar);}
		partial void OnCreated(ChunkyParser grammar);
	}

	partial void EnterRule_program();
	partial void LeaveRule_program();

	// $ANTLR start "program"
	// Chunky.g:19:8: public program : exprs ;
	[GrammarRule("program")]
	public ChunkyParser.program_return program()
	{
		EnterRule_program();
		EnterRule("program", 1);
		TraceIn("program", 1);
		ChunkyParser.program_return retval = new ChunkyParser.program_return(this);
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		ChunkyParser.exprs_return exprs1 = default(ChunkyParser.exprs_return);


		try { DebugEnterRule(GrammarFileName, "program");
		DebugLocation(19, 1);
		try
		{
			// Chunky.g:20:2: ( exprs )
			DebugEnterAlt(1);
			// Chunky.g:20:4: exprs
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(20, 4);
			PushFollow(Follow._exprs_in_program81);
			exprs1=exprs();
			PopFollow();

			adaptor.AddChild(root_0, exprs1.Tree);

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("program", 1);
			LeaveRule("program", 1);
			LeaveRule_program();
		}
		DebugLocation(21, 1);
		} finally { DebugExitRule(GrammarFileName, "program"); }
		return retval;

	}
	// $ANTLR end "program"

	private sealed partial class params_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<CommonTree>, IAstRuleReturnScope
	{
		private CommonTree _tree;
		public CommonTree Tree { get { return _tree; } set { _tree = value; } }
		object IAstRuleReturnScope.Tree { get { return Tree; } }
		public params_return(ChunkyParser grammar) {OnCreated(grammar);}
		partial void OnCreated(ChunkyParser grammar);
	}

	partial void EnterRule_params();
	partial void LeaveRule_params();

	// $ANTLR start "params"
	// Chunky.g:23:1: params : (p+= ID ( ',' p+= ID )* )? -> ^( PARAMS ( $p)* ) ;
	[GrammarRule("params")]
	private ChunkyParser.params_return @params()
	{
		EnterRule_params();
		EnterRule("params", 2);
		TraceIn("params", 2);
		ChunkyParser.params_return retval = new ChunkyParser.params_return(this);
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		IToken char_literal2 = default(IToken);
		IToken p = default(IToken);
		List<IToken> list_p = null;

		CommonTree char_literal2_tree = default(CommonTree);
		CommonTree p_tree = default(CommonTree);
		RewriteRuleITokenStream stream_ID=new RewriteRuleITokenStream(adaptor,"token ID");
		RewriteRuleITokenStream stream_COMMA=new RewriteRuleITokenStream(adaptor,"token COMMA");

		try { DebugEnterRule(GrammarFileName, "params");
		DebugLocation(23, 1);
		try
		{
			// Chunky.g:24:2: ( (p+= ID ( ',' p+= ID )* )? -> ^( PARAMS ( $p)* ) )
			DebugEnterAlt(1);
			// Chunky.g:24:4: (p+= ID ( ',' p+= ID )* )?
			{
			DebugLocation(24, 4);
			// Chunky.g:24:4: (p+= ID ( ',' p+= ID )* )?
			int alt2=2;
			try { DebugEnterSubRule(2);
			try { DebugEnterDecision(2, false);
			int LA2_0 = input.LA(1);

			if ((LA2_0==ID))
			{
				alt2 = 1;
			}
			} finally { DebugExitDecision(2); }
			switch (alt2)
			{
			case 1:
				DebugEnterAlt(1);
				// Chunky.g:24:5: p+= ID ( ',' p+= ID )*
				{
				DebugLocation(24, 6);
				p=(IToken)Match(input,ID,Follow._ID_in_params95);  
				stream_ID.Add(p);

				if (list_p==null) list_p=new List<IToken>();
				list_p.Add(p);

				DebugLocation(24, 11);
				// Chunky.g:24:11: ( ',' p+= ID )*
				try { DebugEnterSubRule(1);
				while (true)
				{
					int alt1=2;
					try { DebugEnterDecision(1, false);
					int LA1_0 = input.LA(1);

					if ((LA1_0==COMMA))
					{
						alt1 = 1;
					}


					} finally { DebugExitDecision(1); }
					switch ( alt1 )
					{
					case 1:
						DebugEnterAlt(1);
						// Chunky.g:24:12: ',' p+= ID
						{
						DebugLocation(24, 12);
						char_literal2=(IToken)Match(input,COMMA,Follow._COMMA_in_params98);  
						stream_COMMA.Add(char_literal2);

						DebugLocation(24, 17);
						p=(IToken)Match(input,ID,Follow._ID_in_params102);  
						stream_ID.Add(p);

						if (list_p==null) list_p=new List<IToken>();
						list_p.Add(p);


						}
						break;

					default:
						goto loop1;
					}
				}

				loop1:
					;

				} finally { DebugExitSubRule(1); }


				}
				break;

			}
			} finally { DebugExitSubRule(2); }



			{
			// AST REWRITE
			// elements: p
			// token labels: 
			// rule labels: retval
			// token list labels: p
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleITokenStream stream_p=new RewriteRuleITokenStream(adaptor,"token p", list_p);
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (CommonTree)adaptor.Nil();
			// 25:3: -> ^( PARAMS ( $p)* )
			{
				DebugLocation(25, 6);
				// Chunky.g:25:6: ^( PARAMS ( $p)* )
				{
				CommonTree root_1 = (CommonTree)adaptor.Nil();
				DebugLocation(25, 8);
				root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(PARAMS, "PARAMS"), root_1);

				DebugLocation(25, 16);
				// Chunky.g:25:16: ( $p)*
				while ( stream_p.HasNext )
				{
					DebugLocation(25, 16);
					adaptor.AddChild(root_1, stream_p.NextNode());

				}
				stream_p.Reset();

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("params", 2);
			LeaveRule("params", 2);
			LeaveRule_params();
		}
		DebugLocation(26, 1);
		} finally { DebugExitRule(GrammarFileName, "params"); }
		return retval;

	}
	// $ANTLR end "params"

	private sealed partial class func_expr_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<CommonTree>, IAstRuleReturnScope
	{
		private CommonTree _tree;
		public CommonTree Tree { get { return _tree; } set { _tree = value; } }
		object IAstRuleReturnScope.Tree { get { return Tree; } }
		public func_expr_return(ChunkyParser grammar) {OnCreated(grammar);}
		partial void OnCreated(ChunkyParser grammar);
	}

	partial void EnterRule_func_expr();
	partial void LeaveRule_func_expr();

	// $ANTLR start "func_expr"
	// Chunky.g:28:1: func_expr : FUNC '(' params ')' block ;
	[GrammarRule("func_expr")]
	private ChunkyParser.func_expr_return func_expr()
	{
		EnterRule_func_expr();
		EnterRule("func_expr", 3);
		TraceIn("func_expr", 3);
		ChunkyParser.func_expr_return retval = new ChunkyParser.func_expr_return(this);
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		IToken FUNC3 = default(IToken);
		IToken char_literal4 = default(IToken);
		IToken char_literal6 = default(IToken);
		ChunkyParser.params_return params5 = default(ChunkyParser.params_return);
		ChunkyParser.block_return block7 = default(ChunkyParser.block_return);

		CommonTree FUNC3_tree = default(CommonTree);
		CommonTree char_literal4_tree = default(CommonTree);
		CommonTree char_literal6_tree = default(CommonTree);

		try { DebugEnterRule(GrammarFileName, "func_expr");
		DebugLocation(28, 1);
		try
		{
			// Chunky.g:29:2: ( FUNC '(' params ')' block )
			DebugEnterAlt(1);
			// Chunky.g:29:4: FUNC '(' params ')' block
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(29, 8);
			FUNC3=(IToken)Match(input,FUNC,Follow._FUNC_in_func_expr129); 
			FUNC3_tree = (CommonTree)adaptor.Create(FUNC3);
			root_0 = (CommonTree)adaptor.BecomeRoot(FUNC3_tree, root_0);

			DebugLocation(29, 13);
			char_literal4=(IToken)Match(input,LPAREN,Follow._LPAREN_in_func_expr132); 
			DebugLocation(29, 15);
			PushFollow(Follow._params_in_func_expr135);
			params5=@params();
			PopFollow();

			adaptor.AddChild(root_0, params5.Tree);
			DebugLocation(29, 25);
			char_literal6=(IToken)Match(input,RPAREN,Follow._RPAREN_in_func_expr137); 
			DebugLocation(29, 27);
			PushFollow(Follow._block_in_func_expr140);
			block7=block();
			PopFollow();

			adaptor.AddChild(root_0, block7.Tree);

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("func_expr", 3);
			LeaveRule("func_expr", 3);
			LeaveRule_func_expr();
		}
		DebugLocation(30, 1);
		} finally { DebugExitRule(GrammarFileName, "func_expr"); }
		return retval;

	}
	// $ANTLR end "func_expr"

	private sealed partial class if_expr_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<CommonTree>, IAstRuleReturnScope
	{
		private CommonTree _tree;
		public CommonTree Tree { get { return _tree; } set { _tree = value; } }
		object IAstRuleReturnScope.Tree { get { return Tree; } }
		public if_expr_return(ChunkyParser grammar) {OnCreated(grammar);}
		partial void OnCreated(ChunkyParser grammar);
	}

	partial void EnterRule_if_expr();
	partial void LeaveRule_if_expr();

	// $ANTLR start "if_expr"
	// Chunky.g:32:1: if_expr : IF '(' cond= expr ')' '{' ( (cons_exps+= expr )? ';' )* '}' ( 'else' (alt_if= if_expr -> ^( IF $cond ^( BLOCK ( $cons_exps)* ) $alt_if) | '{' ( (alt_exps+= expr )? ';' )* '}' -> ^( IF $cond ^( BLOCK ( $cons_exps)* ) ^( BLOCK ( $alt_exps)* ) ) ) | -> ^( IF $cond ( $cons_exps)* ) ) ;
	[GrammarRule("if_expr")]
	private ChunkyParser.if_expr_return if_expr()
	{
		EnterRule_if_expr();
		EnterRule("if_expr", 4);
		TraceIn("if_expr", 4);
		ChunkyParser.if_expr_return retval = new ChunkyParser.if_expr_return(this);
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		IToken IF8 = default(IToken);
		IToken char_literal9 = default(IToken);
		IToken char_literal10 = default(IToken);
		IToken char_literal11 = default(IToken);
		IToken char_literal12 = default(IToken);
		IToken char_literal13 = default(IToken);
		IToken string_literal14 = default(IToken);
		IToken char_literal15 = default(IToken);
		IToken char_literal16 = default(IToken);
		IToken char_literal17 = default(IToken);
		List<CommonTree> list_cons_exps = null;
		List<CommonTree> list_alt_exps = null;
		ChunkyParser.expr_return cond = default(ChunkyParser.expr_return);
		ChunkyParser.if_expr_return alt_if = default(ChunkyParser.if_expr_return);
		ChunkyParser.expr_return cons_exps = default(ChunkyParser.expr_return);
		ChunkyParser.expr_return alt_exps = default(ChunkyParser.expr_return);
		CommonTree IF8_tree = default(CommonTree);
		CommonTree char_literal9_tree = default(CommonTree);
		CommonTree char_literal10_tree = default(CommonTree);
		CommonTree char_literal11_tree = default(CommonTree);
		CommonTree char_literal12_tree = default(CommonTree);
		CommonTree char_literal13_tree = default(CommonTree);
		CommonTree string_literal14_tree = default(CommonTree);
		CommonTree char_literal15_tree = default(CommonTree);
		CommonTree char_literal16_tree = default(CommonTree);
		CommonTree char_literal17_tree = default(CommonTree);
		RewriteRuleITokenStream stream_IF=new RewriteRuleITokenStream(adaptor,"token IF");
		RewriteRuleITokenStream stream_LPAREN=new RewriteRuleITokenStream(adaptor,"token LPAREN");
		RewriteRuleITokenStream stream_RPAREN=new RewriteRuleITokenStream(adaptor,"token RPAREN");
		RewriteRuleITokenStream stream_LCURLY=new RewriteRuleITokenStream(adaptor,"token LCURLY");
		RewriteRuleITokenStream stream_SEMI=new RewriteRuleITokenStream(adaptor,"token SEMI");
		RewriteRuleITokenStream stream_RCURLY=new RewriteRuleITokenStream(adaptor,"token RCURLY");
		RewriteRuleITokenStream stream_43=new RewriteRuleITokenStream(adaptor,"token 43");
		RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
		RewriteRuleSubtreeStream stream_if_expr=new RewriteRuleSubtreeStream(adaptor,"rule if_expr");
		try { DebugEnterRule(GrammarFileName, "if_expr");
		DebugLocation(32, 1);
		try
		{
			// Chunky.g:33:2: ( IF '(' cond= expr ')' '{' ( (cons_exps+= expr )? ';' )* '}' ( 'else' (alt_if= if_expr -> ^( IF $cond ^( BLOCK ( $cons_exps)* ) $alt_if) | '{' ( (alt_exps+= expr )? ';' )* '}' -> ^( IF $cond ^( BLOCK ( $cons_exps)* ) ^( BLOCK ( $alt_exps)* ) ) ) | -> ^( IF $cond ( $cons_exps)* ) ) )
			DebugEnterAlt(1);
			// Chunky.g:33:4: IF '(' cond= expr ')' '{' ( (cons_exps+= expr )? ';' )* '}' ( 'else' (alt_if= if_expr -> ^( IF $cond ^( BLOCK ( $cons_exps)* ) $alt_if) | '{' ( (alt_exps+= expr )? ';' )* '}' -> ^( IF $cond ^( BLOCK ( $cons_exps)* ) ^( BLOCK ( $alt_exps)* ) ) ) | -> ^( IF $cond ( $cons_exps)* ) )
			{
			DebugLocation(33, 4);
			IF8=(IToken)Match(input,IF,Follow._IF_in_if_expr151);  
			stream_IF.Add(IF8);

			DebugLocation(33, 7);
			char_literal9=(IToken)Match(input,LPAREN,Follow._LPAREN_in_if_expr153);  
			stream_LPAREN.Add(char_literal9);

			DebugLocation(33, 15);
			PushFollow(Follow._expr_in_if_expr157);
			cond=expr();
			PopFollow();

			stream_expr.Add(cond.Tree);
			DebugLocation(33, 21);
			char_literal10=(IToken)Match(input,RPAREN,Follow._RPAREN_in_if_expr159);  
			stream_RPAREN.Add(char_literal10);

			DebugLocation(33, 25);
			char_literal11=(IToken)Match(input,LCURLY,Follow._LCURLY_in_if_expr161);  
			stream_LCURLY.Add(char_literal11);

			DebugLocation(33, 29);
			// Chunky.g:33:29: ( (cons_exps+= expr )? ';' )*
			try { DebugEnterSubRule(4);
			while (true)
			{
				int alt4=2;
				try { DebugEnterDecision(4, false);
				int LA4_0 = input.LA(1);

				if (((LA4_0>=FALSE && LA4_0<=FUNC)||(LA4_0>=ID && LA4_0<=INT)||LA4_0==LPAREN||LA4_0==SEMI||(LA4_0>=STRING && LA4_0<=TRUE)||LA4_0==42))
				{
					alt4 = 1;
				}


				} finally { DebugExitDecision(4); }
				switch ( alt4 )
				{
				case 1:
					DebugEnterAlt(1);
					// Chunky.g:33:30: (cons_exps+= expr )? ';'
					{
					DebugLocation(33, 39);
					// Chunky.g:33:39: (cons_exps+= expr )?
					int alt3=2;
					try { DebugEnterSubRule(3);
					try { DebugEnterDecision(3, false);
					int LA3_0 = input.LA(1);

					if (((LA3_0>=FALSE && LA3_0<=FUNC)||(LA3_0>=ID && LA3_0<=INT)||LA3_0==LPAREN||(LA3_0>=STRING && LA3_0<=TRUE)||LA3_0==42))
					{
						alt3 = 1;
					}
					} finally { DebugExitDecision(3); }
					switch (alt3)
					{
					case 1:
						DebugEnterAlt(1);
						// Chunky.g:33:39: cons_exps+= expr
						{
						DebugLocation(33, 39);
						PushFollow(Follow._expr_in_if_expr166);
						cons_exps=expr();
						PopFollow();

						stream_expr.Add(cons_exps.Tree);
						if (list_cons_exps==null) list_cons_exps=new List<CommonTree>();
						list_cons_exps.Add(cons_exps.Tree);


						}
						break;

					}
					} finally { DebugExitSubRule(3); }

					DebugLocation(33, 47);
					char_literal12=(IToken)Match(input,SEMI,Follow._SEMI_in_if_expr169);  
					stream_SEMI.Add(char_literal12);


					}
					break;

				default:
					goto loop4;
				}
			}

			loop4:
				;

			} finally { DebugExitSubRule(4); }

			DebugLocation(33, 53);
			char_literal13=(IToken)Match(input,RCURLY,Follow._RCURLY_in_if_expr173);  
			stream_RCURLY.Add(char_literal13);

			DebugLocation(34, 3);
			// Chunky.g:34:3: ( 'else' (alt_if= if_expr -> ^( IF $cond ^( BLOCK ( $cons_exps)* ) $alt_if) | '{' ( (alt_exps+= expr )? ';' )* '}' -> ^( IF $cond ^( BLOCK ( $cons_exps)* ) ^( BLOCK ( $alt_exps)* ) ) ) | -> ^( IF $cond ( $cons_exps)* ) )
			int alt8=2;
			try { DebugEnterSubRule(8);
			try { DebugEnterDecision(8, false);
			int LA8_0 = input.LA(1);

			if ((LA8_0==43))
			{
				alt8 = 1;
			}
			else if ((LA8_0==AMPER||LA8_0==ASSIGN||(LA8_0>=COMMA && LA8_0<=DAMPER)||(LA8_0>=DOT && LA8_0<=EQUAL)||(LA8_0>=GREATER && LA8_0<=GREATEREQUAL)||(LA8_0>=LESS && LA8_0<=LESSEQUAL)||(LA8_0>=LPAREN && LA8_0<=NOTEQUAL)||(LA8_0>=PERCENT && LA8_0<=PLUS)||(LA8_0>=RPAREN && LA8_0<=STAR)))
			{
				alt8 = 2;
			}
			else
			{
				NoViableAltException nvae = new NoViableAltException("", 8, 0, input);
				DebugRecognitionException(nvae);
				throw nvae;
			}
			} finally { DebugExitDecision(8); }
			switch (alt8)
			{
			case 1:
				DebugEnterAlt(1);
				// Chunky.g:34:5: 'else' (alt_if= if_expr -> ^( IF $cond ^( BLOCK ( $cons_exps)* ) $alt_if) | '{' ( (alt_exps+= expr )? ';' )* '}' -> ^( IF $cond ^( BLOCK ( $cons_exps)* ) ^( BLOCK ( $alt_exps)* ) ) )
				{
				DebugLocation(34, 5);
				string_literal14=(IToken)Match(input,43,Follow._43_in_if_expr179);  
				stream_43.Add(string_literal14);

				DebugLocation(34, 12);
				// Chunky.g:34:12: (alt_if= if_expr -> ^( IF $cond ^( BLOCK ( $cons_exps)* ) $alt_if) | '{' ( (alt_exps+= expr )? ';' )* '}' -> ^( IF $cond ^( BLOCK ( $cons_exps)* ) ^( BLOCK ( $alt_exps)* ) ) )
				int alt7=2;
				try { DebugEnterSubRule(7);
				try { DebugEnterDecision(7, false);
				int LA7_0 = input.LA(1);

				if ((LA7_0==IF))
				{
					alt7 = 1;
				}
				else if ((LA7_0==LCURLY))
				{
					alt7 = 2;
				}
				else
				{
					NoViableAltException nvae = new NoViableAltException("", 7, 0, input);
					DebugRecognitionException(nvae);
					throw nvae;
				}
				} finally { DebugExitDecision(7); }
				switch (alt7)
				{
				case 1:
					DebugEnterAlt(1);
					// Chunky.g:34:14: alt_if= if_expr
					{
					DebugLocation(34, 20);
					PushFollow(Follow._if_expr_in_if_expr185);
					alt_if=if_expr();
					PopFollow();

					stream_if_expr.Add(alt_if.Tree);


					{
					// AST REWRITE
					// elements: IF, cond, cons_exps, alt_if
					// token labels: 
					// rule labels: cond, alt_if, retval
					// token list labels: 
					// rule list labels: cons_exps
					// wildcard labels: 
					retval.Tree = root_0;
					RewriteRuleSubtreeStream stream_cond=new RewriteRuleSubtreeStream(adaptor,"rule cond",cond!=null?cond.Tree:null);
					RewriteRuleSubtreeStream stream_alt_if=new RewriteRuleSubtreeStream(adaptor,"rule alt_if",alt_if!=null?alt_if.Tree:null);
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);
					RewriteRuleSubtreeStream stream_cons_exps=new RewriteRuleSubtreeStream(adaptor,"token cons_exps",list_cons_exps);
					root_0 = (CommonTree)adaptor.Nil();
					// 34:34: -> ^( IF $cond ^( BLOCK ( $cons_exps)* ) $alt_if)
					{
						DebugLocation(34, 37);
						// Chunky.g:34:37: ^( IF $cond ^( BLOCK ( $cons_exps)* ) $alt_if)
						{
						CommonTree root_1 = (CommonTree)adaptor.Nil();
						DebugLocation(34, 39);
						root_1 = (CommonTree)adaptor.BecomeRoot(stream_IF.NextNode(), root_1);

						DebugLocation(34, 43);
						adaptor.AddChild(root_1, stream_cond.NextTree());
						DebugLocation(34, 48);
						// Chunky.g:34:48: ^( BLOCK ( $cons_exps)* )
						{
						CommonTree root_2 = (CommonTree)adaptor.Nil();
						DebugLocation(34, 50);
						root_2 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(BLOCK, "BLOCK"), root_2);

						DebugLocation(34, 57);
						// Chunky.g:34:57: ( $cons_exps)*
						while ( stream_cons_exps.HasNext )
						{
							DebugLocation(34, 57);
							adaptor.AddChild(root_2, stream_cons_exps.NextTree());

						}
						stream_cons_exps.Reset();

						adaptor.AddChild(root_1, root_2);
						}
						DebugLocation(34, 70);
						adaptor.AddChild(root_1, stream_alt_if.NextTree());

						adaptor.AddChild(root_0, root_1);
						}

					}

					retval.Tree = root_0;
					}

					}
					break;
				case 2:
					DebugEnterAlt(2);
					// Chunky.g:35:8: '{' ( (alt_exps+= expr )? ';' )* '}'
					{
					DebugLocation(35, 8);
					char_literal15=(IToken)Match(input,LCURLY,Follow._LCURLY_in_if_expr219);  
					stream_LCURLY.Add(char_literal15);

					DebugLocation(35, 12);
					// Chunky.g:35:12: ( (alt_exps+= expr )? ';' )*
					try { DebugEnterSubRule(6);
					while (true)
					{
						int alt6=2;
						try { DebugEnterDecision(6, false);
						int LA6_0 = input.LA(1);

						if (((LA6_0>=FALSE && LA6_0<=FUNC)||(LA6_0>=ID && LA6_0<=INT)||LA6_0==LPAREN||LA6_0==SEMI||(LA6_0>=STRING && LA6_0<=TRUE)||LA6_0==42))
						{
							alt6 = 1;
						}


						} finally { DebugExitDecision(6); }
						switch ( alt6 )
						{
						case 1:
							DebugEnterAlt(1);
							// Chunky.g:35:13: (alt_exps+= expr )? ';'
							{
							DebugLocation(35, 21);
							// Chunky.g:35:21: (alt_exps+= expr )?
							int alt5=2;
							try { DebugEnterSubRule(5);
							try { DebugEnterDecision(5, false);
							int LA5_0 = input.LA(1);

							if (((LA5_0>=FALSE && LA5_0<=FUNC)||(LA5_0>=ID && LA5_0<=INT)||LA5_0==LPAREN||(LA5_0>=STRING && LA5_0<=TRUE)||LA5_0==42))
							{
								alt5 = 1;
							}
							} finally { DebugExitDecision(5); }
							switch (alt5)
							{
							case 1:
								DebugEnterAlt(1);
								// Chunky.g:35:21: alt_exps+= expr
								{
								DebugLocation(35, 21);
								PushFollow(Follow._expr_in_if_expr224);
								alt_exps=expr();
								PopFollow();

								stream_expr.Add(alt_exps.Tree);
								if (list_alt_exps==null) list_alt_exps=new List<CommonTree>();
								list_alt_exps.Add(alt_exps.Tree);


								}
								break;

							}
							} finally { DebugExitSubRule(5); }

							DebugLocation(35, 29);
							char_literal16=(IToken)Match(input,SEMI,Follow._SEMI_in_if_expr227);  
							stream_SEMI.Add(char_literal16);


							}
							break;

						default:
							goto loop6;
						}
					}

					loop6:
						;

					} finally { DebugExitSubRule(6); }

